Fix spacing on cards

--- a/src/styles/base/grid.scss
+++ b/src/styles/base/grid.scss
@@ -4,13 +4,18 @@
 
   @mixin grid($viewport) {
 	display: grid;
-	justify-items: center;
 	@if $viewport==mobile {
 		grid-template-columns: repeat(1, 1fr);
+		justify-items: center;
+		align-items: center;
 	} @else if $viewport==tablet {
 		grid-template-columns: repeat(2, 1fr);
+		justify-items: center;
+		align-items: center;
 		row-gap: 10px;
 	} @else if $viewport==desktop {
 		grid-template-columns: repeat(4, 1fr);
+		justify-items: center;
+		align-items: flex-end;
 	}
 }
