--- a/src/styles/base/mediaqueries.scss
+++ b/src/styles/base/mediaqueries.scss
@@ -26,6 +26,8 @@ Base - Media Queries
         @include flex(column, center);
       } @else if $property==card {
         @include flex(column, center);
+        height: 300px;
+        width: 380px;
       } @else if $property==logo {
         width: 22rem;
         left: -10px;
@@ -52,7 +54,9 @@ Base - Media Queries
       } @else if $property==tech {
         @include flex(column, center);
       } @else if $property==card {
-        @include flex(row, center);
+        @include flex(column, center);
+        height: 300px;
+        width: 400px;
       } @else if $property==logo {
         width: 25rem;
         left: -10px;
@@ -79,7 +83,9 @@ Base - Media Queries
       } @else if $property==tech {
         @include flex(row, center);
       } @else if $property==card {
-        @include flex(row, center);
+        @include flex(column, center);
+        height: 350px;
+        width: 250px;
       } @else if $property==logo {
         width: 35rem;
         left: -10px;
