--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -67,8 +67,8 @@ canvas {
 }
 
 .tech-container {
+  @include mediaQueries(grid);
   width: 100vw;
-  margin: 0rem;
 }
 
 .tech-content {
@@ -92,22 +92,12 @@ canvas {
   padding: 0rem .5rem 0rem .5rem;
 }
 
-.fe-be {
-  @include mediaQueries(grid);
-}
-
 .card {
-  @include flex(column, center);
+  @include mediaQueries(card);
   background: $dark;
   text-align: center;
-  width: 80%;
-  height: 100%;
-  min-height: 20rem;
-  max-height: 300px;
-  min-width: 300px;
   margin: 0.8rem;    
   --borderWidth: 2px;
-  background: #1D1F20;
   position: relative;
   border-radius: var(--borderWidth);
 }
